# packed_simd

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md  crates.js  perf_guide.md  readme.md  rust-toolchain  rustfmt.toml  search-index.js  settings.html  source-files.js
.github/workflows/: benchmarks.yml  build-test-verify.yml  ci.yml  docs.yml  run-ci-script.yml
cfg_if/: all.html  index.html  macro.cfg_if.html
ci/: android-install-sdk.sh  benchmark.sh  check_clippy.sh  check_fmt.sh  clean_all.sh  dox.sh  run-docker.sh  run.sh  run_examples.sh
crates/vTests/: Cargo.toml
crates/verify/: Cargo.toml
examples/: Cargo.toml
examples/aobench/: Cargo.toml  benchmark.sh  build.rs  readme.md
examples/dot_product/: Cargo.toml
examples/fannkuch_redux/: Cargo.toml
examples/mandelbrot/: Cargo.toml  benchmark.sh  build.rs  readme.md
examples/mandelbrot/src/: ispc_.rs  ispc_tasks.rs  lib.rs  main.rs  output.rs  par_simd.rs  scalar.rs  scalar_par.rs  simd.rs  simd_par.rs
examples/matrix_inverse/: Cargo.toml
examples/nbody/: Cargo.toml  readme.md
examples/nbody/benches/: algs.rs
examples/nbody/src/: lib.rs  main.rs  scalar.rs  simd.rs
examples/options_pricing/: Cargo.toml  benchmark.sh  build.rs  readme.md
examples/options_pricing/src/: lib.rs  main.rs  scalar.rs  simd.rs  simd_kernels.rs  simd_par.rs  sum.rs
examples/optpricing/: Cargo.toml
examples/slice_sum/: Cargo.toml
examples/slice_sum/src/: main.rs
examples/spectral_norm/: Cargo.toml  readme.md
examples/stencil/: Cargo.toml  benchmark.sh  build.rs  readme.md
examples/triangle_xform/: Cargo.toml  readme.md
implementors/libm/: trait.F64Ext.js
implementors/packed_simd_2/: trait.Mask.js
libm/: all.html  fn.acos.html  fn.acosf.html  fn.asin.html  fn.asinf.html  fn.atan.html  fn.atan2.html  fn.atan2f.html  fn.atanf.html  fn.cbrt.html  fn.cbrtf.html  fn.ceil.html  fn.ceilf.html  fn.cos.html  fn.cosf.html  fn.cosh.html  fn.coshf.html  fn.exp.html  fn.exp2.html  fn.exp2f.html  fn.expf.html  fn.expm1.html  fn.expm1f.html  fn.fabs.html  fn.fabsf.html  fn.fdim.html  fn.fdimf.html  fn.floor.html  fn.floorf.html  fn.fma.html  fn.fmaf.html  fn.fmax.html  fn.fmaxf.html  fn.fmin.html  fn.fminf.html  fn.fmod.html  fn.fmodf.html  fn.hypot.html  fn.hypotf.html  fn.ldexp.html  (+33 more)
micro_benchmarks/: Cargo.toml
micro_benchmarks/benches/: mask_reductions.rs
packed_simd_2/: all.html  index.html  macro.shuffle!.html  macro.shuffle.html  sidebar-items.js  struct.LexicographicallyOrdered.html  struct.m128.html  struct.m16.html  struct.m32.html  struct.m64.html  struct.m8.html  struct.msize.html  trait.Cast.html  trait.FromBits.html  trait.FromCast.html  trait.IntoBits.html  trait.Mask.html  trait.SimdArray.html  trait.SimdVector.html  type.cptrx2.html  type.cptrx4.html  type.cptrx8.html  type.f32x16.html  type.f32x2.html  type.f32x4.html  type.f32x8.html  type.f64x2.html  type.f64x4.html  type.f64x8.html  type.i128x1.html  type.i128x2.html  type.i128x4.html  type.i16x16.html  type.i16x2.html  type.i16x32.html  type.i16x4.html  type.i16x8.html  type.i32x16.html  type.i32x2.html  type.i32x4.html  (+64 more)
packed_simd_2/masks/: struct.m128.html  struct.m16.html  struct.m32.html  struct.m64.html  struct.m8.html  struct.msize.html
packed_simd_2/sealed/: trait.Mask.html  trait.Simd.html  trait.SimdArray.html
packed_simd_2/v128/: type.f32x4.html  type.f64x2.html  type.i128x1.html  type.i16x8.html  type.i32x4.html  type.i64x2.html  type.i8x16.html  type.m128x1.html  type.m16x8.html  type.m32x4.html  type.m64x2.html  type.m8x16.html  type.u128x1.html  type.u16x8.html  type.u32x4.html  type.u64x2.html  type.u8x16.html
packed_simd_2/v16/: type.i8x2.html  type.m8x2.html  type.u8x2.html
packed_simd_2/v256/: type.f32x8.html  type.f64x4.html  type.i128x2.html  type.i16x16.html  type.i32x8.html  type.i64x4.html  type.i8x32.html  type.m128x2.html  type.m16x16.html  type.m32x8.html  type.m64x4.html  type.m8x32.html  type.u128x2.html  type.u16x16.html  type.u32x8.html  type.u64x4.html  type.u8x32.html
packed_simd_2/v32/: type.i16x2.html  type.i8x4.html  type.m16x2.html  type.m8x4.html  type.u16x2.html  type.u8x4.html
packed_simd_2/v512/: type.f32x16.html  type.f64x8.html  type.i128x4.html  type.i16x32.html  type.i32x16.html  type.i64x8.html  type.i8x64.html  type.m128x4.html  type.m16x32.html  type.m32x16.html  type.m64x8.html  type.m8x64.html  type.u128x4.html  type.u16x32.html  type.u32x16.html  type.u64x8.html  type.u8x64.html
packed_simd_2/v64/: type.f32x2.html  type.i16x4.html  type.i32x2.html  type.i8x8.html  type.m16x4.html  type.m32x2.html  type.m8x8.html  type.u16x4.html  type.u32x2.html  type.u8x8.html
packed_simd_2/vPtr/: type.cptrx2.html  type.cptrx4.html  type.cptrx8.html  type.mptrx2.html  type.mptrx4.html  type.mptrx8.html
packed_simd_2/vSize/: type.isizex2.html  type.isizex4.html  type.isizex8.html  type.msizex2.html  type.msizex4.html  type.msizex8.html  type.usizex2.html  type.usizex4.html  type.usizex8.html
perf-guide/: 404.html  bound_checks.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json  vert-hor-ops.html
perf-guide/float-math/: approx.html  fma.html  fp.html  svml.html
perf-guide/prof/: linux.html  mca.html  profiling.html
perf-guide/src/: SUMMARY.md
perf-guide/target-feature/: attribute.html  features.html  inlining.html  runtime.html  rustflags.html
src/: api.rs  codegen.rs  lib.rs  llvm.rs  masks.rs  sealed.rs  test_utils.rs  testing.rs  v128.rs  v16.rs  v256.rs  v32.rs  v512.rs  v64.rs  vPtr.rs  vSize.rs
src/api/: bit_manip.rs  bitmask.rs  cast.rs  cmp.rs  default.rs  fmt.rs  from.rs  hash.rs  into_bits.rs  into_trunc.rs  minimal_iuf.rs  minimal_mask.rs  mod.rs  ops.rs  ops_vector_arithmetic.rs  partial_eq.rs  permute.rs  permute_dyn.rs  reductions.rs  rotates.rs  select.rs  shuffle.rs  shuffle1_dyn.rs  shuffle_bytes.rs  swap_bytes.rs
src/cfg_if/: lib.rs.html
src/codegen/: bit_manip.rs  llvm.rs  permute_dyn.rs  pointer_sized_int.rs  shuffle.rs  shuffle1_dyn.rs  shuffle_bytes.rs  swap_bytes.rs  (+1 more)
tests/: endianness.rs
verify/: Cargo.toml  readme.md
(+487 files in other folders)
