[package]
name = "ppv"
version = "0.1.0"
authors = ["Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>"]
description = "Portable Packed SIMD vectors"
documentation = "https://docs.rs/crate/ppv/"
homepage = "https://github.com/gnzlbg/ppv"
repository = "https://github.com/gnzlbg/ppv"
keywords = ["simd", "vector", "portability"]
categories = ["hardware-support", "concurrency", "no-std", "data-structures"]
license = "MIT/Apache-2.0"

[badges]
appveyor = { repository = "gnzlbg/ppv" }
travis-ci = { repository = "gnzlbg/ppv" }
codecov = { repository = "gnzlbg/ppv" }
is-it-maintained-issue-resolution = { repository = "gnzlbg/ppv" }
is-it-maintained-open-issues = { repository = "gnzlbg/ppv" }
maintenance = { status = "experimental" }

[dependencies]
cfg-if = "^0.1"

[dev-dependencies]
interpolate_idents = "^0.2"
arrayvec = { version = "^0.4", default-features = false }

# FIXME: neon requires recompiling the std library with neon enabled...
# This works around that by fetching coresimd from the nursery directly,
# and recompiling it with neon.
[target.'cfg(all(target_arch = "arm", target_feature = "v7", target_feature = "neon"))'.dependencies.coresimd]
name = "coresimd"
git = "http://github.com/rust-lang-nursery/stdsimd.git"
