[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
build = "build.rs"

[dependencies]
packed_simd = { path = "../.." }
rayon = "^1.0"
time = "^0.1"
ispc = { version = "^0.3.6", optional = true }

[build-dependencies]
ispc = { version = "^0.3.6", optional = true }

[[bin]]
name = "mandelbrot"
path = "src/main.rs"

[lib]
name = "mandelbrot_lib"
path = "src/lib.rs"

[features]
default = []
sleef-sys = ["packed_simd/sleef-sys"]
coresimd = ["packed_simd/coresimd"]

[profile.release]
opt-level = 3
debug = false
lto = 'fat'
debug-assertions = false
codegen-units = 1
panic = 'abort'
