[package]
name = "options_pricing"
version = "0.1.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]

[dependencies]
packed_simd = { path = "../.." }
time = "^0.1"
rayon = "^1.0"
ispc = { version = "^0.3.6", optional = true }

[build-dependencies]
ispc = { version = "^0.3.6", optional = true }

[[bin]]
name = "options_pricing"
path = "src/main.rs"

[lib]
name = "options_pricing_lib"
path = "src/lib.rs"

[features]
default = []
coresimd = [ "packed_simd/coresimd" ]
sleef-sys = [ "packed_simd/sleef-sys" ]

[profile.release]
opt-level = 3
debug = false
lto = 'fat'
debug-assertions = false
codegen-units = 1
panic = 'abort'