[package]
name = "options_pricing"
version = "0.1.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
edition = "2018"

[dependencies]
packed_simd = { package = "packed_simd_2", path = "../.." }
time = "^0.1"
rayon = "^1.0"
ispc = { version = "^1.0.4", optional = true }

[build-dependencies]
ispc = { version = "^1.0.4", optional = true }

[[bin]]
name = "options_pricing"
path = "src/main.rs"

[lib]
name = "options_pricing_lib"
path = "src/lib.rs"

[features]
default = []
core_arch = [ "packed_simd/core_arch" ]
sleef-sys = [ "packed_simd/sleef-sys" ]
ispc_libm = [ "ispc" ]
